--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AngularElectronSeed</title>
+  <link href="http://vjs.zencdn.net/6.4.0/video-js.css" rel="stylesheet">
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
